Mon Jun  7 08:54:31 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Loader.cpp:
          Fixed a memory leak. PortableGroup library doesn't need to init
          required services as it's responsibility of ACE to do so once a
          service is created.

        * orbsvcs/tests/Miop/McastHello/svc.conf:
          Fixed the test so that in dynamic builds required services from
          svc.conf are loaded as needed.

Mon Jun  7 01:23:51 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tao/Remote_Invocation.cpp:

          Fixed Bugzilla #3853.

        * tests/Bug_3853_Regression/Bug_3853_Regression.mpc:
        * tests/Bug_3853_Regression/Client_ORBInitializer.h:
        * tests/Bug_3853_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3853_Regression/Hello.idl:
        * tests/Bug_3853_Regression/Hello_i.h:
        * tests/Bug_3853_Regression/Hello_i.cpp:
        * tests/Bug_3853_Regression/client.cpp:
        * tests/Bug_3853_Regression/client_interceptor.h:
        * tests/Bug_3853_Regression/client_interceptor.cpp:
        * tests/Bug_3853_Regression/run_test.pl:
        * tests/Bug_3853_Regression/server.cpp:

          Added regression test.

        * bin/tao_orb_tests.lst:

          Added Bug_3853_Regression test.

Sun Jun  6 18:16:26 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
          Use ACE_NEW instead of plain C++ new

        * tao/PortableServer/Root_POA.h:
          Doxygen changes

        * tests/AMI/ami_test_i.cpp:
        * tests/Collocation_Opportunities/Collocation_Opportunities.cpp:
          Layout changes

Sat Jun  5 19:09:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/including.idl:
          Fixed identifier

Sat Jun  5 17:55:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp: