@@ -14,14 +14,12 @@ Client_ORBInitializer::Client_ORBInitializer ()
 void
 Client_ORBInitializer::pre_init (
     PortableInterceptor::ORBInitInfo_ptr info)
-  ACE_THROW_SPEC ((CORBA::SystemException))
 {
 }
 
 void
 Client_ORBInitializer::post_init (
     PortableInterceptor::ORBInitInfo_ptr info)
-  ACE_THROW_SPEC ((CORBA::SystemException))
 {
   PortableInterceptor::ClientRequestInterceptor_ptr interceptor =
     PortableInterceptor::ClientRequestInterceptor::_nil ();
