@@ -21,7 +21,7 @@
 
 class Echo_Client_Request_Interceptor
   : public virtual PortableInterceptor::ClientRequestInterceptor,
-    public virtual TAO_Local_RefCounted_Object
+    public virtual ::CORBA::LocalObject
 {
   // = Client-side echo interceptor.  For checking interceptor visually only.
 public:
@@ -31,31 +31,21 @@ public:
   virtual ~Echo_Client_Request_Interceptor ();
   // dtor.
 
-  virtual char * name (void)
-    ACE_THROW_SPEC ((CORBA::SystemException));
+  virtual char * name (void);
   // Canonical name of the interceptor.
 
-  virtual void destroy (void)
-    ACE_THROW_SPEC ((CORBA::SystemException));
+  virtual void destroy (void);
 
-  virtual void send_poll (PortableInterceptor::ClientRequestInfo_ptr)
-    ACE_THROW_SPEC ((CORBA::SystemException));
+  virtual void send_poll (PortableInterceptor::ClientRequestInfo_ptr);
 
-  virtual void send_request (PortableInterceptor::ClientRequestInfo_ptr ri)
-    ACE_THROW_SPEC ((CORBA::SystemException,
-                     PortableInterceptor::ForwardRequest));
+  virtual void send_request (PortableInterceptor::ClientRequestInfo_ptr ri);
 
-  virtual void receive_reply (PortableInterceptor::ClientRequestInfo_ptr ri)
-    ACE_THROW_SPEC ((CORBA::SystemException));
+  virtual void receive_reply (PortableInterceptor::ClientRequestInfo_ptr ri);
 
-  virtual void receive_other (PortableInterceptor::ClientRequestInfo_ptr)
-    ACE_THROW_SPEC ((CORBA::SystemException,
-                     PortableInterceptor::ForwardRequest));
+  virtual void receive_other (PortableInterceptor::ClientRequestInfo_ptr);
 
-  virtual void receive_exception (PortableInterceptor::ClientRequestInfo_ptr ri)
-    ACE_THROW_SPEC ((CORBA::SystemException,
-                    PortableInterceptor::ForwardRequest));
-
+  virtual void receive_exception (PortableInterceptor::ClientRequestInfo_ptr ri);
+  
 private:
   const char *myname_;
 };
